[package]
name = "e9571_json_lib"
version = "0.1.1"
edition = "2024"
description = "A Rust crate for JSON serialization, deserialization, and non-standard JSON parsing"
license = "MIT"
repository = "https://github.com/e9571/e9571_json_lib"
documentation = "https://docs.rs/e9571_json_lib"
homepage = "https://github.com/e9571"
keywords = ["json", "serialization", "deserialization", "parsing", "data-processing"]
categories = ["encoding", "parsing"]


[dependencies]
serde_json = "1.0.141"
e9571_lib1 = "0.1.0"